--- a/.github/workflows/update_Code_action.yml
+++ b/.github/workflows/update_Code_action.yml
@@ -14,7 +14,7 @@ jobs:
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.head.ref, 'user_changes')
     steps: 
       - name: cloning appsAway
-        run: git clone https://github.com/icub-tech-iit/appsAway 
+        run: git clone https://github.com/vtikha/appsAway 
       - name: check working directory
         run: |
             ls
@@ -56,14 +56,14 @@ jobs:
         with:
           private_key: ${{ secrets.ICUB_TECH_CODE_APP_KEY }}
           app_id: ${{ secrets.ICUB_TECH_CODE_APP_ID }}
-          repository: icub-tech-iit/code
+          repository: vtikha/code
       - name: Checkout Code repository
         uses: actions/checkout@v2
         env:
           GITHUB_APPS_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
         with:
           token: ${{ env.GITHUB_APPS_TOKEN }}
-          repository: icub-tech-iit/code
+          repository: vtikha/code
           path: "./code"      
       - name: check working directory
         run: |
@@ -92,7 +92,7 @@ jobs:
         with:
           github_token: ${{ env.GITHUB_APPS_TOKEN }}
           directory: "/home/runner/work/appsAway/appsAway/code"
-          repository: icub-tech-iit/code
+          repository: vtikha/code
           
   placeholder:
     runs-on: ubuntu-latest
