--- a/.github/workflows/create_app_branch.yml
+++ b/.github/workflows/create_app_branch.yml
@@ -5,10 +5,6 @@ on:
     repository_dispatch:
         types: [add_app]
 
-
-#            mv -v ./appsAway/user_changes/* ./icub-tech-apps/dist/database/upgrade/
-#            mv -v ./appsAway/user_changes/images/* ./icub-tech-apps/dist/express/images/
-
 jobs:
   update_code:
     runs-on: ubuntu-latest
@@ -33,7 +29,6 @@ jobs:
         run: |
             ls
             pwd
-      #      git checkout ${{ github.event.client-payload.branch_name }}
       - name: copies app folder to temporary folder
         run: |
             cd code
@@ -42,20 +37,19 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: appsAway
-      - name: Create branch
-        run: |
-            cd appsAway
-            git branch ${{ github.event.client_payload.branch_name }}
-          
       - name: check working directory
         run: |
             ls
             pwd
-      - name: checkout created branch
-        run: |
-            cd appsAway
-            git checkout ${{ github.event.client_payload.branch_name }}
             
+      - name: copies app folder
+        run: |
+            mv ./test/tmp.md ./
+            mv -v ./test/* ./appsAway/demos/
+            mv ./tmp.md ./test/
+      - name: clean working directory
+        run: |
+            rm -rf code
       - name: get file data
         id: get_filedata
         run: |
@@ -79,68 +73,12 @@ jobs:
               echo $appname_list
               echo ::set-output name=user_list::$user_list
               echo ::set-output name=appname_list::$appname_list
-              ls
-              
-              
-      - name: copies user_changes folder
-        run: |
-            mv ./test/tmp.md ./
-            mv -v ./test/* ./appsAway/demos/
-            mv ./tmp.md ./test/
-      - name: Commit changes
-        run: |
-            cd appsAway
-            pwd
-            git status
-            git config --local user.email "actions@github.com"
-            git config --local user.name "GitHub Action"
-            git add -A
-            git commit -m "Merged user changes in appsAway" -a
-        
-      - name: push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.event.client_payload.branch_name }}
-          directory: "./appsAway/"
-      - name: clean working directory
-        run: |
-            rm -rf appsAway
-            rm -rf code
-      - uses: actions/checkout@v2
-        with:
-          repository: vtikha/appsAway
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.event.client_payload.branch_name }}
-
-      #- name: get file data
-      #  id: get_filedata
-      #  run: |
-      #        cd user_changes
-      #        app_list=$(ls -p | grep / )
-      #        len_list=${#app_list[@]}
-      #        iter=0
-      #        for app in $app_list
-      #        do
-      #          if [ $iter != 0 ];
-      #          then
-      #            user_list="$user_list,"
-      #            appname_list="$appname_list<br/>"
-      #          fi
-      #          user_list="$user_list$(echo $app | awk -F'~' '{print $1}')"
-      #          appname_list="$appname_list$(echo $app | awk -F'~' '{print $2}')"
-      #          iter=$((iter+1))
-      #        done
-      #        echo $user_list
-      #        echo $appname_list
-      #        echo ::set-output name=user_list::$user_list
-      #        echo ::set-output name=appname_list::$appname_list
             
       - name: pull-request
         id: open-pr
         uses: peter-evans/create-pull-request@v3
         with:
-            base: master
+            path: appsAway
             branch: ${{ github.event.client_payload.branch_name }}
             title: "Adding new applications to the website."
             body: ${{ steps.get_filedata.outputs.appname_list }}
