--- a/.github/workflows/create_changes_branch.yml
+++ b/.github/workflows/create_changes_branch.yml
@@ -99,7 +99,7 @@ jobs:
             title: "Adding user changes into the website."
             body: ${{ steps.get_filedata.outputs.changes_list }}
             assignees: ${{ steps.get_filedata.outputs.user_list }}
-            reviewers: "AlexAntn,vtikha,ilaria-carlini"
+            reviewers: "AlexAntn,vtikha"
         
       - name: Check outputs
         run: |
@@ -107,7 +107,7 @@ jobs:
           echo "Pull Request URL - ${{ steps.open-pr.outputs.pull-request-url }}"
               
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
