fix issue with new action images
Recent update broke it, updating to see if it is fixed: 

https://github.com/actions/checkout/issues/760

--- a/.github/workflows/create_app_branch.yml
+++ b/.github/workflows/create_app_branch.yml
@@ -142,6 +142,9 @@ jobs:
             echo "assignees: ${{ steps.get_filedata.outputs.user_list }}"
             echo "branch: ${{ github.event.client_payload.branch_name }}"
               
+      - name: Tell git that my folder is fine
+        run: git config --global --add safe.directory /github/workspace
+        
       - name: pull-request
         uses: AlexAntn/pull-request@master
         env:
